site::hc:admin-interface: Update sidebar sections and items

--- a/hc/en/admin-interface.html
+++ b/hc/en/admin-interface.html
@@ -136,8 +136,25 @@
                     <h4><strong>Activity</strong></h4>
 
                     <ul>
-                      <li><strong>Comments:</strong> Maintain comments posted to entries. See <a href="approving-comments.html">Approve Comments</a>.</li>
-                      <li><strong>Maintenance:</strong> System and hooked maintenance tools.</li>
+                      <li><strong>Comments:</strong> Maintain comments posted to entries. See <a href="approving-comments.html">Approve Comments</a>.
+                        <ul>
+                          <li><strong>Button shortlink to Spam Protector:</strong> Manage SPAM protection. Also see <a href="spam.html">Spam Settings</a>.</li>
+                        </ul>
+                      </li>
+                      <li><strong>Activity hooks:</strong> Plugin activity links that are non-entry related. See <a href="using-plugins.html">Using Plugins</a>.</li>
+                    </ul>
+
+                    <h4><strong>Settings</strong></h4>
+
+                    <ul>
+                      <li><strong>Configuration:</strong> Global configuration. See <a href="configuration.html">Configuration</a>.</li>
+                      <li><strong>Themes:</strong> Select and configure your site’s theme/template. See <a href="themes.html">Manage Themes</a>.
+                      <li><strong>Plugins:</strong> Manage sidebar and event plugins. See <a href="using-plugins.html">Using Plugins</a>.</li>
+                        <ul>
+                          <li><strong>Spam Protector configuration:</strong> Manage SPAM protection. Also see <a href="spam.html">Spam Settings</a>.</li>
+                        </ul>
+                      </li>
+                      <li><strong>Maintenance:</strong> System and hooked maintenance tools.
                         <ul>
                           <li><strong>Clear template cache:</strong> Clear current themes Smarty template cache.</li>
                           <li><strong>Import data:</strong> Import data from another blog/cms system. See <a href="import-export.html">Import/Export Entries</a>.</li>
@@ -146,17 +163,14 @@
                           <li><strong>Rebuild Thumbs:</strong> Rebuild thumbnail images of all media items. This can be very useful if you change thumbnail dimensions in the site’s <a href="configuration.html">configuration</a> or if images become accidentally corrupted. For Styx 3.0 there is an additional <a href="media-migration-tasks.html">detailed description</a> available, recommended to read for migrational upgraders!</li>
                           <li><strong>Hooked plugin tools:</strong> Changelog/Log viewer, Theme and Plugin cleanup Managers, Database migrations, etc.</li>
                         </ul>
+                      </li>
                     </ul>
 
-                    <h4><strong>Settings</strong></h4>
+                    <h4><strong>User Management</strong></h4>
 
                     <ul>
-                      <li><strong>Configuration:</strong> Global configuration. See <a href="configuration.html">Configuration</a>.</li>
-                      <li><strong>Themes:</strong> Select and configure your site’s theme/template. See <a href="themes.html">Manage Themes</a>.</li>
-                      <li><strong>Plugins:</strong> Manage sidebar and event plugins. See <a href="using-plugins.html">Using Plugins</a>.</li>
                       <li><strong>Users:</strong> Manage individual users. See <a href="user-management.html">User management</a>.</li>
                       <li><strong>Groups:</strong> Manage user groups. Also see <a href="user-management.html">User management</a>.</li>
-                      <li><strong>Spam Protector:</strong> Manage SPAM protection. Also see <a href="spam.html">Spam Settings</a>.</li>
                     </ul>
 
                     <h3>Main Content Area:</h3>
