site::hc:code-primers: Update file list for removals

--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -327,16 +327,13 @@ print_r($entries);
 <p>We offer those database layers, which all implement an identical interface across all layers:</p>
 
 <ul>
-  <li><strong>generic</strong>: zendframework-DB adapter [Removed with Styx 3.0]</li>
-  <li><strong>mysql</strong>: MySQL databases</li>
-  <li><strong>mysqli</strong>: MySQL databases (PHP 5.5+ compatible Backend, better performance)</li>
+  <li><strong>mysqli</strong>: MariaDB/MySQL databases (PHP 5.5+ compatible Backend, better performance)</li>
   <li><strong>pdo-postgres</strong>: PDO-Postgresql driver (requires PHP PDO extension)</li>
   <li><strong>pdo-sqlite</strong>: PDO-sqlite driver (requires PHP PDO extension)</li>
   <li><strong>postgres</strong>: native postgresql driver (requires PHP extension)</li>
   <li><strong>sqlite</strong>: native sqlite driver (requires PHP sqlite extension)</li>
   <li><strong>sqlite3</strong>: native sqlite3 driver (requires PHP sqlite3 extension)</li>
   <li><strong>sqlite3oo</strong>: native sqlite3 driver using Object-Oriented interface (requires PHP sqlite3 extension)</li>
-  <li><strong>sqlrelay</strong>: DB adapter using “sqlrcon” PHP extension</li>
 </ul>
 
 <p>Those layers implement these central functions:</p>
@@ -610,24 +607,14 @@ print_r($entries);
 
 <ul>
   <li><strong>b2evolution.inc.php</strong></li>
-  <li><strong>bblog.inc.php</strong></li>
   <li><strong>blogger.inc.php</strong></li>
-  <li><strong>bmachine.inc.php</strong></li>
   <li><strong>geeklog.inc.php</strong></li>
-  <li><strong>lifetype.inc.php</strong></li>
   <li><strong>livejournal.inc.php</strong></li>
   <li><strong>moveabletype.inc.php</strong></li>
-  <li><strong>nucleus.inc.php</strong></li>
-  <li><strong>nuke.inc.php</strong></li>
-  <li><strong>old_blogger.inc.php</strong></li>
   <li><strong>phpbb.inc.php</strong></li>
-  <li><strong>pivot.inc.php</strong></li>
-  <li><strong>pmachine.inc.php</strong></li>
   <li><strong>serendipity.inc.php</strong></li>
   <li><strong>smf.inc.php</strong></li>
-  <li><strong>sunlog.inc.php</strong></li>
   <li><strong>textpattern.inc.php</strong></li>
-  <li><strong>voodoopad.inc.php</strong></li>
   <li><strong>wordpress-pg.inc.php</strong></li>
   <li><strong>wordpress.inc.php</strong></li>
   <li><strong>generic.inc.php</strong>: Import through a generic RSS feed</li>
