book: Remove mentioned templates for Serendipity Styx 4.4.0

--- a/book/index.html
+++ b/book/index.html
@@ -38737,14 +38737,6 @@ Backend Styles definiert und über die dynamisch erstellte (virtuelle) <code cla
 
 <p class="desc citem-desc">
 <span class="tag-box invisible">
-    <span class="inline-tag">Template-Dateien!admin/oldie.css</span>
-</span>
-<code class="item file">admin/oldie.css</code>
-<span class="desc-info">Helfer-Style Definitionen für ältere Browser.</span>
-</p>
-
-<p class="desc citem-desc">
-<span class="tag-box invisible">
     <span class="inline-tag">Template-Dateien!admin/user.css</span>
 </span>
 <code class="item file">admin/user.css</code>
@@ -38815,22 +38807,12 @@ Diese Datei definiert und erhält alles Nötige, um die Benutzergruppenliste im 
 
 <p class="desc citem-desc">
 <span class="tag-box invisible">
-    <span class="inline-tag">Template-Dateien!admin/guess_input.tpl</span>
-</span>
-<code class="item file">admin/guess_input.tpl</code>
-<span class="desc-info">Smarty Pendant zu <code>/include/functions_installer.inc.php</code>.
-Diese Datei bereitet die Konfiguration Inhalte über die Funktion <code class="item function">serendipity_guessInput()</code>auf
-und setzt sie in ein HTML output Feld (radio, password, text, select, ...).</span>
-</p>
-
-<p class="desc citem-desc">
-<span class="tag-box invisible">
     <span class="inline-tag">Template-Dateien!admin/images.inc.tpl</span>
 </span>
 <code class="item file">admin/images.inc.tpl</code>
 <span class="desc-info">Smarty Pendant zu <code>/include/admin/images.inc.php</code>, <code>serendipity_admin_image_selector.php</code>.
 Diese Datei definiert und erhält alles Nötige, um den Content der "Backend Mediathek Seitenleiste: Mediathek" darzustellen.
-Sie fasst die Ausgaben verschiedender bereits erwähnter <code>media_*.tpl</code> Dateien für die Ausgabe zusammen.</span>
+Sie fasst die Ausgaben verschiedener bereits erwähnten <code>media_*.tpl</code> Dateien für die Ausgabe zusammen.</span>
 </p>
 
 <p class="desc citem-desc">
