--- a/hc/en/code-primer.html
+++ b/hc/en/code-primer.html
@@ -176,7 +176,7 @@ print_r($entries);
 <p>On top of that (or below), certain variables that are not included in the Serendipity Configuration panel can be configured in this file; If they are not present, the Serendipity defaults will be used, though not all of them are really meant to be touched. Such variables are:</p>
 
 <ul class="plainList">
-  <li><code>$serendipity['production']</code>: If set to “false” you can evoke extra debugging output when errors occur. If set to “debug”, it will be extra-verbose. (default: based on version, RC and alpha/betas default to false)</li>
+  <li><code>$serendipity['production']</code>: If set to “false” you can evoke extra debugging output when errors occur. If set to “debug”, it will be extra-verbose. (Temporary developer extensions of “debug” up from Styx 4.4.0 are “forcecompile” and “smartydebug”.) The default setting is: based on version, RC and alpha/betas default to false)</li>
   <li><code>$serendipity['allowDateManipulation']</code>: If set to true (default), users can change the date of entries</li>
   <li><code>$serendipity['max_last_modified']</code>: Amount of seconds how fresh an article must be, so that a comment to an entry will modify its LastModified-timestamp (default: 7 days)</li>
   <li><code>$serendipity['max_fetch_limit']</code>: In RSS-Feeds, how many entries can be fetched (default 50)</li>
@@ -200,6 +200,7 @@ print_r($entries);
   <li><code>$serendipity['use_autosave']</code>: Whether to use local-browser autosaving feature (default true)</li>
   <li><code>$serendipity['imagemagick_nobang']</code>: When enabled, ImageMagick image resizing operates with comma values, which can change the given image w/h setting by 1px by rounding differences (default false)</li>
   <li><code>$serendipity['imagemagick_thumb_parameters']</code>: Optional parameters passed to ImageMagick when creating thumbnails (default empty)</li>
+  <li><code>$serendipity['forceLightMode'] = true;</code> In case your browser runs with “auto” or “dark” mode preferences and need to return from backend “dark” mode into “light” mode for any case</li>
 </ul>
 
 <h4 id="docs-htaccess">.htaccess</h4>
