Sync Spartacus legacy

--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -476,7 +476,7 @@
         <h4 class="plugin_summary">Tagging of entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_freetag</dt>
-            <dd class="plugin_version">Version 6.0.0 (GPL, Last Updated 2024-02-07)</dd>
+            <dd class="plugin_version">Version 6.0.0 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Malte Paskuda, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -784,7 +784,7 @@
         <h4 class="plugin_summary">POPfetcher</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_popfetcher</dt>
-            <dd class="plugin_version">Version 1.57 (GPL, Last Updated 2024-02-07)</dd>
+            <dd class="plugin_version">Version 1.58 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Jason Levitt</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
         </dl>
@@ -1084,7 +1084,7 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2023-11-26)</dd>
+            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7.0</dd>
         </dl>
@@ -1248,7 +1248,7 @@
         <h4 class="plugin_summary">User Self-Registration</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_adduser</dt>
-            <dd class="plugin_version">Version 2.56 (GPL, Last Updated 2023-08-19)</dd>
+            <dd class="plugin_version">Version 2.56 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 4.0</dd>
         </dl>
@@ -1560,7 +1560,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.84 (GPL, Last Updated 2023-07-14)</dd>
+            <dd class="plugin_version">Version 1.84 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 4.0</dd>
         </dl>
@@ -1724,7 +1724,7 @@
         <h4 class="plugin_summary">Frequently Asked Questions</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_faq</dt>
-            <dd class="plugin_version">Version 1.59 (GPL, Last Updated 2024-02-26)</dd>
+            <dd class="plugin_version">Version 1.60 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Falk Doering, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.3</dd>
         </dl>
@@ -1952,7 +1952,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.84 (GPL, Last Updated 2023-07-14)</dd>
+            <dd class="plugin_version">Version 1.84 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 4.0</dd>
         </dl>
@@ -1968,7 +1968,7 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2023-11-26)</dd>
+            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7.0</dd>
         </dl>
@@ -2036,7 +2036,7 @@
         <h4 class="plugin_summary">Comment Spice</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_commentspice</dt>
-            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2022-11-19)</dd>
+            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
@@ -2132,7 +2132,7 @@
         <h4 class="plugin_summary">Microblogging (Twitter,Identica)</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_twitter</dt>
-            <dd class="plugin_version">Version 2.2.0 (GPL, Last Updated 2024-02-07)</dd>
+            <dd class="plugin_version">Version 2.2.0 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Grischa Brockhaus, Peter Heimann, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.2</dd>
         </dl>
@@ -2164,7 +2164,7 @@
         <h4 class="plugin_summary">Properties/Templates of categories</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_categorytemplates</dt>
-            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2023-11-26)</dd>
+            <dd class="plugin_version">Version 2.4.2 (GPL, Last Updated 2024-03-25)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Judebert, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.7.0</dd>
         </dl>
@@ -2765,14 +2765,14 @@
 <section id="group_STATISTICS" class="spartacus-group">
     <h3>Statistics</h3>
     <div id="serendipity_event_google_analytics" class="plugin">
-        <h4 class="plugin_summary">Google Analytics</h4>
+        <h4 class="plugin_summary">Google Analytics 4</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_google_analytics</dt>
-            <dd class="plugin_version">Version 1.8 (GPL, Last Updated 2021-12-21)</dd>
-            <dd class="plugin_maintainers">kleinerChemiker, Ian Styx</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
+            <dd class="plugin_version">Version 2.1.0 (GPL, Last Updated 2024-04-02)</dd>
+            <dd class="plugin_maintainers">Jari Turkia, kleinerChemiker, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 4.0</dd>
         </dl>
-        <p class="plugin_description">This plugin adds extended Google Analytic functionality to your Page like tracking external links or download links.</p>
+        <p class="plugin_description">This plugin adds extended Google Analytics 4 functionality.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_google_analytics.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/legacy/serendipity_event_google_analytics">GitHub</a></li>
