hc::plugin-api: Cast an example ID arg(1) to int

--- a/hc/en/plugin-api.html
+++ b/hc/en/plugin-api.html
@@ -652,7 +652,7 @@ class serendipity_event_backpage extends serendipity_event
     {
         global $serendipity;
         // Get existing data
-        $property = serendipity_fetchEntryProperties($eventData['id']);
+        $property = serendipity_fetchEntryProperties((int) $eventData['id']);
         $supported_properties = array('attach_block');
 
         foreach($supported_properties AS $prop_key) {
