hc::database: Minor

--- a/hc/en/database.html
+++ b/hc/en/database.html
@@ -318,7 +318,7 @@
                       <li><span class="var">categoryid</span>: Primary ID</li>
                       <li><span class="var">category_name</span>: Category name</li>
                       <li><span class="var">category_icon</span>: A category icon</li>
-                      <li><span class="var">category_description</span>: Description of Category</li>
+                      <li><span class="var">category_description</span>: Description of category</li>
                       <li><span class="var">authorid</span>: Owner of category</li>
                       <li><span class="var">category_left</span>: Nested Set ID of next category for hierarchy</li>
                       <li><span class="var">category_right</span>: Nested Set ID of previous category for hierarchy</li>
