Sync Spartacus legacy

--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -468,7 +468,7 @@
         <h4 class="plugin_summary">Choose Language</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_multilingual</dt>
-            <dd class="plugin_version">Version 1.20 (GPL, Last Updated 2024-08-28)</dd>
+            <dd class="plugin_version">Version 1.20 (GPL, Last Updated 2024-10-20)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Wesley Hwang-Chung, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 3.0</dd>
         </dl>
@@ -580,14 +580,11 @@
         <h4 class="plugin_summary">Show trusted users</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_xsstrust</dt>
-            <dd class="plugin_version">Version 1.2 (GPL, Last Updated 2020-12-15)</dd>
-            <dd class="plugin_maintainers">Loris Zena</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_version">Version 1.3 (GPL, Last Updated 2024-10-20)</dd>
+            <dd class="plugin_maintainers">Loris Zena, Ian Styx</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 4.0</dd>
         </dl>
-        <p class="plugin_description">Displays all users with their ethics (represented by a traffic light). 
-                                   Green light means &#039;cool&#039;; yellow light means 
-                                   &#039;warning&#039;; red light means &#039;banned&#039;
-                                   The administrator can easily modify this value for each user.</p>
+        <p class="plugin_description">Displays all users with their ethics (represented by a traffic light). Green light means 'cool'; yellow light means 'warning'; red light means 'banned'. The administrator can easily modify this value for each user.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_xsstrust.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/legacy/serendipity_event_xsstrust">GitHub</a></li>
