hc::en:i18n 2025 and remove [cs] lang

--- a/hc/en/i18n.html
+++ b/hc/en/i18n.html
@@ -119,8 +119,7 @@
         'es' =&gt; 'Spanish',
         'fr' =&gt; 'French',
         'fi' =&gt; 'Finnish',
-        'cs' =&gt; 'Czech (Win-1250)',
-        'cz' =&gt; 'Czech (ISO-8859-2)',
+        'cz' =&gt; 'Czech',
         'nl' =&gt; 'Dutch',
         'is' =&gt; 'Icelandic',
         'tr' =&gt; 'Turkish',
@@ -261,7 +260,7 @@
     <div class="section-container footer-policy">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <p class="footer-policy__rights">© 2016 - 2024 Serendipity Styx Edition.</p>
+                <p class="footer-policy__rights">© 2016 - 2025 Serendipity Styx Edition.</p>
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
