--- a/hc/en/configuration.html
+++ b/hc/en/configuration.html
@@ -132,14 +132,14 @@
                       <li><strong>Old Password</strong> [<span class="vartype-str">string</span>] If you change the password in the field above, you need to enter the current user password into this field.</li>
                       <li><strong>Real name</strong> [<span class="vartype-str">string</span>] The full name of the author. This is the name seen by readers.</li>
                       <li><strong>Your e-mail address</strong> [<span class="vartype-str">string</span>] Your personal e-mail address.</li>
-                      <li><strong>Language</strong> [<span class="vartype-array">list</span>] Select the language for your Blog. This overrules the general configuration language setting.</li>
+                      <li><strong>Language</strong> [<span class="vartype-array">list</span>] Select your personal language for your Blog. This overrules the general configuration language setting.</li>
                       <li><strong>Styx Theme Dark Mode</strong> [<span class="vartype-bool">boolean</span>] Yes/No.</li>
                       <li><strong>Use WYSIWYG editor</strong> [<span class="vartype-bool">boolean</span>] Do you want to use the WYSIWYG editor? Yes/No.</li>
                       <li><strong>Send comment announcements?</strong> [<span class="vartype-bool">boolean</span>] Do you want to receive emails when comments are posted to your entries? Yes/No.</li>
                       <li><strong>Send trackback announcements?</strong> [<span class="vartype-bool">boolean</span>] Do you want to receive emails when trackbacks are posted to your entries? Yes/No.</li>
                       <li><strike><strong>Default Dashboard widgets?</strong> [<span class="vartype-bool">boolean</span>] Show default and hardcoded Dashboard widgets, like draft entries and last comments. Yes/No.</strike> Removed with Styx 3.3.1.</li>
-                      <li><strong>Simplified filters</strong> [<span class="vartype-bool">boolean</span>] When enabled, search forms and filter functions are reduced to essential options. When disabled, you will see every possible filter option, like in the "Media library" or the "Edit entries" list, under condition of actual permission. Yes/No.</li>
-                      <li><strong>Enable use of popup windows for the Backend</strong> [<span class="vartype-bool">boolean</span>] Do you want to use popup windows for some Backend functionality? When disabled (default), inline modal dialogs will be used for e.g. the category selector and MediaLibrary. On the other hand this popup-window option only works for some elements, like the MediaLibrary and some plugins. Others, like categories, will show up embedded. Yes/No.</li>
+                      <li><strong>Simplified filters</strong> [<span class="vartype-bool">boolean</span>] When enabled, search forms and filter functions are reduced to essential options. When disabled, every possible filter or task option is shown, like in the "Media library" or in the "Edit entries" list, under condition of actual permission. Yes/No.</li>
+                      <li><strong>Enable use of popup windows for the Backend</strong> [<span class="vartype-bool">boolean</span>] Shall popup windows be used for some backend functionality? When disabled (default), inline modal dialogs will be used for e.g. the category selector and MediaLibrary. On the other hand this popup-window option only works for some elements, like the MediaLibrary and some plugins. Others, like categories, will show up embedded. Yes/No.</li>
                       <li><strong>Force specific Backend popup behaviour</strong> [<span class="vartype-str">string</span>] If you generally disable upper Backend popup option, you can specifically force using popups, respectively the embedded entryform mode for specific places by entering a comma separated list of places here. Available places are: [ images, comments, categories, tags, links ]. Defaults to [ categories,tags,links ].</li>
                       <li><strong>Show toolbar within media selector popup?</strong> [<span class="vartype-bool">boolean</span>] Allow media/image administration toolbar within the entries image-button page popups. Yes/No.</li>
                     </ul>
@@ -149,8 +149,8 @@
                     <p>Default settings for new entries</p>
 
                     <ul>
-                      <li><strong>Comments & trackbacks to this entry requires moderation</strong> [<span class="vartype-bool">boolean</span>] Default settings for comment moderation. Yes/No.</li>
-                      <li><strong>Allow comments to this entry</strong> [<span class="vartype-bool">boolean</span>] Default settings for comments. Yes/No.</li>
+                      <li><strong>Comments & trackbacks require moderation</strong> [<span class="vartype-bool">boolean</span>] Default settings for entry comment moderation. Yes/No.</li>
+                      <li><strong>Allow comments</strong> [<span class="vartype-bool">boolean</span>] Default settings for entry comments. Yes/No.</li>
                       <li><strong>New Entry</strong> [<span class="vartype-array">list</span>] Default settings for Publish or Draft</li>
                       <li><strong>Category</strong> [<span class="vartype-array">list</span>] Add a default category when posting entries.</li>
                       <li><strong>Enable autosave-feature</strong> [<span class="vartype-bool">boolean</span>] When enabled, the text you enter into Blog entries will be periodically saved in your browser's session storage. If your browser crashes during writing, the next time you create a new entry, the text will be restored from this autosave. Yes/No.</li>
